fix: fixed issue with content width on safari

--- a/assets/css/f5-hugo.css
+++ b/assets/css/f5-hugo.css
@@ -1126,6 +1126,7 @@ main a:hover {
 
 .content-has-toc {
   max-width: 50%;
+  width: 50%;
 }
 
 .sidebar-content-collapsed-width {
